--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@portabletext/react": "^3.0.15",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.51.2",
     "react-social-icons": "^6.15.0",
     "sanity": "^3.35.2",
+    "sonner": "^1.4.41",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
