--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@hookform/resolvers": "^3.3.4",
     "@portabletext/react": "^3.0.15",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -19,6 +20,7 @@
     "@sanity/vision": "^3.35.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.363.0",
@@ -31,6 +33,7 @@
     "react-social-icons": "^6.15.0",
     "sanity": "^3.35.2",
     "sanity-plugin-singleton-tools": "^1.0.1",
+    "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
